--- a/gridflags.css
+++ b/gridflags.css
@@ -244,3 +244,89 @@
    grid-column: 2 / 5 ;
    grid-row: 3 / 4 ;
  }
+
+ #GREEK{
+    display: grid;
+    height: 300px;
+    width: 500px;
+    margin: 60px;
+    grid-template-columns: repeat(15, 1fr);
+    grid-template-rows: repeat(9, 1fr) ;
+    background-color: rgb(24, 95, 165);
+
+ }
+
+ #yogurtwhite1{
+   background-color: white;
+   grid-column: 6 / 16 ;
+   grid-row: 2 / 3 ;
+ }
+ 
+ #yogurtwhite2{
+   background-color: white;
+   grid-column: 6 / 16 ;
+   grid-row: 4 / 5 ;
+ }
+
+ #yogurtwhite3{
+   background-color: white;
+   grid-column: 1 / 16 ;
+   grid-row: 6 / 7 ;
+ }
+
+ #yogurtwhite4{
+   background-color: white;
+   grid-column: 1 / 16 ;
+   grid-row: 8 / 9 ;
+ }
+
+ #yogurtcross1{
+   background-color: white;
+   grid-column: 1/ 6 ;
+   grid-row: 3 / 4 ;
+ }
+
+ #yogurtcross2{
+   background-color: white;
+   grid-column: 3 / 4 ;
+   grid-row: 1 / 6 ;
+ }
+
+ #czechia{
+    display: grid;
+    height: 300px;
+    width: 500px;
+    margin: 60px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr ;
+
+
+ }
+
+ #rojo{
+   background-color: red;
+   grid-column: 1 / 3 ;
+   grid-row: 2 / 3 ;
+
+ }
+
+ #blanco{
+   background-color: white;
+   grid-column: 1 / 3 ;
+   grid-row: 1 / 2 ;
+
+ }
+
+ #TRINGLE{
+   grid-column: 1 / 2;
+   grid-row: 1 / 3;
+   width: 0;
+   height: 0;
+   border-style: solid;
+   border-width: 150px 0 150px 200px;
+   border-color: transparent transparent transparent #0150a3;
+
+   
+
+ }
+ 
