--- a/animation.css
+++ b/animation.css
@@ -12,6 +12,7 @@ nav > div {
     background-color: skyblue;
     height: 50px;
     margin: 10px;
+    animation: flying 8s infinite;
 
 
 }
@@ -20,6 +21,7 @@ aside{
     background-color: royalblue;
     height: 50vh;
     margin: 10px;
+    animation: ghost 6s infinite ease-in-out;     
 
 }
 
@@ -72,6 +74,72 @@ footer{
     100%{
         height: 100vh ;
         width: 100vw ;
+    }
+}
+
+@keyframes ghost {
+    
+    0%{
+        opacity: 100%;
+        transform: rotate(0);
+    }
+    25%{
+        opacity: 50%;
+        transform: rotate(90deg);
+    }
+    50%{
+        opacity: 1%;
+        transform: rotate(180deg);
+    }
+    75%{
+        opacity: 50%;
+        transform: rotate(270deg);
+    }
+    100%{
+        opacity: 100%;
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes flying {
+    
+    0%{
+        transform: translate(0px, 0px);
+    }
+    25%{
+        transform: translate(400px, 200px);
+    }
+    50%{
+        transform: translate(600px, 400px);
+    }
+    75%{
+        transform: translate(00px, 100px);
+    }
+    100%{
+        transform: translate(0px, 0px);
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    header{
+        height: 10vh;
+    }
+
+    #content {
+        width: 50%;
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+
+    nav > div{
+        height: 12px;
+        width: 50px;
+    }
+
+    aside{
+        width: 30vw;
+
     }
 }
 
