--- a/The Great Event/GreatEvent.css
+++ b/The Great Event/GreatEvent.css
@@ -37,3 +37,21 @@
     text-align: center;
 
 }
+
+#sillydiv {
+    background-color:hotpink;
+    margin: 60px 60px 60px 60px;
+    height: 500px;
+    width: 500px;
+    text-align: center;
+
+}
+
+#letterHater {
+    width: 330px
+}
+
+#greeting {
+    margin: 60px 60px 60px 60px;
+
+}
