--- a/Fnaf/fnaf.css
+++ b/Fnaf/fnaf.css
@@ -1,3 +1,85 @@
 body {
-    background-color: beige;
+    background-image: url(Fnaf2Background.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    color: white;
+    font-size:large;
 }
+
+footer {
+    margin-top: 200px;
+}
+
+#navBar {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr ;
+    grid-template-rows: 1fr;
+    background-color: #7A005F;
+    color: white;
+    text-align: center;
+    height: 44px;
+    padding-top: 20px;
+}
+
+#nav1 {
+    color: white;
+    grid-column: 1 / 2 ;
+    grid-row: 1 / 2;
+}
+
+#nav2 {
+    color: white;
+    grid-column: 2 / 3 ;
+    grid-row: 1 / 2;
+}
+
+
+#nav3 {
+    color: white;
+    grid-column: 3 / 4 ;
+    grid-row: 1 / 2;
+}
+
+
+#title {
+    font-family:cursive;
+    text-align:center;
+}
+
+#paragraphs {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr ;
+    grid-template-rows: 1fr;
+    text-align: center;
+
+}
+
+#firstPara {
+    grid-column: 2 / 3 ;
+    grid-row: 1 / 2;
+    margin-right: 100px ;
+    margin-left: 100px;
+}
+
+#secondPara {
+    grid-column: 1 / 2 ;
+    grid-row: 1 / 2;
+    margin-right: 100px ;
+    margin-left: 100px;
+    margin-top: 150px;
+
+}
+
+#thirdPara {
+    grid-column: 3 / 4 ;
+    grid-row: 1 / 2;
+    margin-right: 100px ;
+    margin-left: 100px;
+    margin-top: 150px;
+}
+
+#secretButton {
+    height: 10px;
+    width:20px;
+}
+
