--- a/Fnaf/BiteO87.css
+++ b/Fnaf/BiteO87.css
@@ -3,8 +3,172 @@ body {
     background-size: 100% 100%;
     background-repeat: no-repeat;
     color: white;
+    font-size: x-large;
 }
 
 footer {
     margin-top: 280px;
+}
+
+#navBar {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr ;
+    grid-template-rows: 1fr;
+    background-color:#7A005F;
+    color: white;
+    text-align: center;
+    height: 44px;
+    padding-top: 20px;
+    animation-name: circle;
+    animation-duration:8s;
+    animation-iteration-count: infinite;
+    animation-timing-function:ease-in-out;
+}
+
+#nav1 {
+    color: white;
+    grid-column: 1 / 2 ;
+    grid-row: 1 / 2;
+}
+
+#nav2 {
+    color: white;
+    grid-column: 2 / 3 ;
+    grid-row: 1 / 2;
+}
+
+
+#nav3 {
+    color: white;
+    grid-column: 3 / 4 ;
+    grid-row: 1 / 2;
+}
+
+
+#title {
+    font-family:cursive;
+    text-align:center;
+}
+
+#paragraphs {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr ;
+    grid-template-rows: 1fr;
+    text-align: center;
+
+}
+
+#firstPara {
+    grid-column: 2 / 3 ;
+    grid-row: 1 / 2;
+    margin-right: 100px ;
+    margin-left: 100px;
+}
+
+#secondPara {
+    grid-column: 1 / 2 ;
+    grid-row: 1 / 2;
+    margin-right: 100px ;
+    margin-left: 100px;
+    margin-top: 150px;
+
+}
+
+#thirdPara {
+    grid-column: 3 / 4 ;
+    grid-row: 1 / 2;
+    margin-right: 100px ;
+    margin-left: 100px;
+    margin-top: 150px;
+}
+
+#buttonstuff {
+    text-align: center;
+}
+
+@keyframes circle {
+    0%{
+        border-radius:0% ;
+    }
+    25%{
+        border-radius:50% ;
+    }
+    50%{
+        border-radius:100% ;
+    }
+    75%{
+        border-radius:50% ;
+    }
+    100%{
+        border-radius:0% ;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    header{
+        height: 15vh;
+    }
+
+    #content {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+
+    nav > div{
+        height: 25px;
+        width: 100px;
+    }
+
+    aside{
+        width: 20vw;
+
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    header{
+        height: 10vh;
+    }
+
+    #content {
+        width: 50%;
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+
+    nav > div{
+        height: 12px;
+        width: 50px;
+    }
+
+    aside{
+        width: 30vw;
+
+    }
+}
+
+@media screen and (min-width: 750px) {
+    header{
+        height: 20vh;
+    }
+
+    #content {
+        width: 50%;
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+
+    nav > div{
+        height: 12px;
+        width: 50px;
+    }
+
+    aside{
+        width: 15vw;
+
+    }
 }
