--- a/Fnaf/fnaf.css
+++ b/Fnaf/fnaf.css
@@ -8,20 +8,13 @@ body {
 
 footer {
     margin-top: 150px;
-
-}
-
-#footerStuff {
-    grid-row: 1 / 4 ;
-    grid-column: 1 / 2 ;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr ;
-    grid-template-rows: 1fr;
     background-color: rgb(24, 24, 24);
     text-align: center;
-  
-   
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
 }
+
 
 #navBar {
     display: grid;
@@ -32,6 +25,7 @@ footer {
     text-align: center;
     height: 44px;
     padding-top: 20px;
+    border-radius: 10%;
 }
 
 #nav1 {
@@ -57,6 +51,11 @@ footer {
 #title {
     font-family:cursive;
     text-align:center;
+    animation-name: scary-rainbow;
+    animation-duration:10s;
+    animation-iteration-count: infinite;
+    animation-timing-function:ease-in-out;
+
 }
 
 #paragraphs {
@@ -64,6 +63,7 @@ footer {
     grid-template-columns: 1fr 1fr 1fr ;
     grid-template-rows: 1fr;
     text-align: center;
+    
 
 }
 
@@ -96,3 +96,89 @@ footer {
     width:20px;
 }
 
+@keyframes scary-rainbow {
+    0%{
+        background-color: purple;
+    }
+    25%{
+        background-color: orangered;
+    }
+    50%{
+        background-color: red;
+    }
+    75%{
+        background-color: orangered;
+    }
+    100%{
+        background-color: purple;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    header{
+        height: 15vh;
+    }
+
+    #content {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+
+    nav > div{
+        height: 25px;
+        width: 100px;
+    }
+
+    aside{
+        width: 20vw;
+
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    header{
+        height: 10vh;
+    }
+
+    #content {
+        width: 50%;
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+
+    nav > div{
+        height: 12px;
+        width: 50px;
+    }
+
+    aside{
+        width: 30vw;
+
+    }
+}
+
+@media screen and (min-width: 750px) {
+    header{
+        height: 20vh;
+    }
+
+    #content {
+        width: 50%;
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+
+    nav > div{
+        height: 12px;
+        width: 50px;
+    }
+
+    aside{
+        width: 15vw;
+
+    }
+}
