--- a/Fnaf/fnaf.css
+++ b/Fnaf/fnaf.css
@@ -72,6 +72,7 @@ footer {
     grid-row: 1 / 2;
     margin-right: 100px ;
     margin-left: 100px;
+    margin-bottom: 10px;
 }
 
 #secondPara {
@@ -94,6 +95,10 @@ footer {
 #secretButton {
     height: 10px;
     width:20px;
+}
+
+#freddy {
+    opacity: 0%;
 }
 
 @keyframes scary-rainbow {
